# demo-server

./: Cargo.toml  README.md
public/: index.html  text.txt  text.txt.minisig
src/: main.rs
